// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Move modal reducer should move ticket 1`] = `
{
  "clientId": null,
  "isSubmitting": true,
  "post_type": "all",
  "search_terms": "",
  "target_post_id": null,
  "ticketId": null,
}
`;

exports[`Move modal reducer should move ticket with error 1`] = `
{
  "clientId": null,
  "isSubmitting": false,
  "post_type": "all",
  "search_terms": "",
  "target_post_id": null,
  "ticketId": null,
}
`;

exports[`Move modal reducer should move ticket with success 1`] = `
{
  "clientId": null,
  "isSubmitting": false,
  "post_type": "all",
  "search_terms": "",
  "target_post_id": null,
  "ticketId": null,
}
`;

exports[`Move modal reducer should set data 1`] = `
{
  "clientId": null,
  "isSubmitting": false,
  "post_type": "some",
  "search_terms": "",
  "target_post_id": null,
  "ticketId": null,
}
`;
